# lawdigest_data_pipeline

./: .gitignore  AGENT.md  AGENTS.md  README.md  perfect.nginx.tmp  pyproject.toml  requirements.txt  test.ipynb  test.py
airflow/: requirements.txt
docs/: PLAN_embedding_extension.md  PROGRESS_embedding_extension.md  RESULT_embedding_extension.md  airflow_rollback_runbook.md  bug:ai_summary_fallback_report.md  n8n_import_guide.md  n8n_pipeline_migration.md  refactor:정당별_표결_출력_변경_report.md  test:pytest_migration_report.md
jobs/: hourly_data_update.py  upload_chairman_gov_bills.py
n8n/: lawdigest_bills_pipeline_ v2.json  lawdigest_bills_pipeline_python_v3.json  lawdigest_bills_pipeline_v2.exported.json  lawdigest_bills_pipeline_v2.json  lawdigest_stage_workflows.json  workflows_export.json
prefect_flows/: collect_bills_flow.py  test_flow.py
scripts/: airflow_control.sh  find_missing_summaries.py  import_lawdigest_bills_pipeline.sh  n8n_execute_with_safe_broker.sh  repair_missing_summaries.py  run_n8n_bills_stage.py  run_n8n_db_pipeline.py
src/: __init__.py
tests/: DataFecther_test.ipynb  conftest.py  reproduce_issue_proposer_types.py  test_ai_summarizer_fallback.py  test_ai_summarizer_gemini.py  test_constants.py  test_data_fetcher_integration.py  test_database_manager.py  test_database_manager_lawmaker.py  test_database_manager_logic.py  test_database_manager_statistics.py  test_database_manager_transaction.py  test_integration_pipeline.py  test_utils.py  test_workflow_manager_ai_test_mode.py
tools/: USAGE.md  collect_alternatives.py  collect_bills.py  (+6 more)
(+48 files in other folders)
