[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawdigest-dataops"
version = "0.1.0"
description = "모두의입법 프로젝트를 위한 데이터 수집 및 가공, 적재 파이프라인 코드"
readme = "README.md"
authors = [
  { name = "Minjae Park", email = "parkmj9260@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pandas",
  "lxml",
  "openai",
  "python-dotenv",
  "beautifulsoup4",
  "tqdm",
  "pymysql",
  "langchain",
  "langchain-community",
  "prefect>=3.6.20",
  "ipython>=8.37.0",
  "qdrant-client>=1.17.0",
  "google-generativeai>=0.8.6",
  "tiktoken>=0.12.0",
  "langchain-openai>=1.1.10",
  "langchain-google-genai>=4.2.1",
  "llama-index>=0.14.15",
]

[project.optional-dependencies]
dev = [
  "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
